--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
         <title>Bellerose Hub</title>
         <!-- Load Google Material Icons -->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- Load Custom Stylesheet -->
+        <link type="text/css" rel="stylesheet" href="assets/css/custom.css" />
         <!-- Load Materialize Stylesheet -->
         <link type="text/css" rel="stylesheet" href="assets/css/materialize.css" media="screen,projection" />
         <!-- Load jQuery -->
@@ -22,7 +24,7 @@
         <!-- Let browser know website is optimized for mobile -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
-    <body style="background-color: #212121">
+    <body style="background-color: #212121;">
         <nav class="red darken-4" style="" role="navigation">
             <div class="nav-wrapper" style="padding-right: 15px; padding-left: 15px;">
                 <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
@@ -35,6 +37,6 @@
                 </ul>
             </div>
         </nav>
-        <iframe id="mainIframe" style="border: 0; width: 100%; height: 100%; position: absolute;" src="news.html"></iframe>
+        <iframe id="mainIframe" src="news.html"></iframe>
     </body>
 </html>
